--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
-addons:
-  postgresql: 11.2
+services:
+  - postgresql
 before_script:
-  - cp config/database.yml.travis config/database.yml
-  - psql -c 'create database lol_champs_test;' -U postgres
+  - cp config/database.yml
+  - psql -c 'create database travis_ci_test;' -U postgres
 language: ruby
 rvm:
   - 2.4.1
