--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 services:
   - postgresql
 before_script:
-  - cp config/database.yml
+  - cp config/database.yml.travis config/database.yml
   - psql -c 'create database travis_ci_test;' -U postgres
 language: ruby
 rvm:
